# optiga-nbt-lib-c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MAINTAINERS.md  README.md  REUSE.toml
.cmake/: InfineonDownloadOverrides.cmake
.cmake/infineon-package-management/: InfineonPackageManagement.cmake
.github/workflows/: build-test.yml  doc-deploy.yml
.reuse/: dep5
data/: Doxyfile.in  cppcheck.suppressions
docs/: userguide.md
docs/api-reference/OPTIGA Authenticate NBT Host Library for C/: annotated.html  classes.html  dir_074ab8a2d0dd4c0170895986702490e5.html  dir_3256b884987e45dedabfee3868ef7ad1.html  dir_411474a7b219913ce25bf09ab814b377.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4c88b149cca98edc069aab520a2b4654.html  dir_536ba6f9bb1fd01885923a5c54723a78.html  dir_74692d1058b00c451ecaad62e7a8f77f.html  dir_7840aa1aa17b81ca27acb6007b0b5024.html  dir_9228cbe8e484a48ca4809da1df6fd1eb.html  dir_9976705d5bbf2bab4bcbcf04d7aef989.html  dir_a05b9500704dce8ee3e5d26be8851161.html  dir_b8c509a151f8969d6a506431c0fbfb44.html  dir_dd19abf23489110be22aa059a2b3f758.html  dir_e2fc1d4b916a874f58dbe7830e256d03.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_defs_l.html  globals_defs_n.html  globals_enum.html  globals_eval.html  globals_func.html  globals_l.html  globals_n.html  globals_r.html  globals_type.html  globals_vars.html  ifx-apdu-error_8h.html  ifx-apdu-error_8h_source.html  ifx-apdu-protocol_8h.html  ifx-apdu-protocol_8h_source.html  ifx-apdu_8h.html  ifx-apdu_8h_source.html  ifx-crc_8h.html  ifx-crc_8h_source.html  (+104 more)
libs/hsw-apdu/: CMakeLists.txt  README.md
libs/hsw-apdu-nbt/: .clang-format  CMakeLists.txt  README.md
libs/hsw-apdu-nbt/data/: hsw-apdu-nbt-config.cmake.in
libs/hsw-apdu-nbt/include/infineon/: nbt-apdu-lib.h  nbt-apdu.h  nbt-cmd-config.h  nbt-cmd-perso.h  nbt-cmd.h  nbt-errors.h  nbt-parse-response.h
libs/hsw-apdu-nbt/src/: nbt-apdu.c  nbt-build-apdu-config.c  nbt-build-apdu-perso.c  nbt-build-apdu.c  nbt-cmd-config.c  nbt-cmd-perso.c  nbt-cmd.c  nbt-errors.c  nbt-parse-response.c
libs/hsw-apdu-nbt/src/include/: nbt-build-apdu-config.h  nbt-build-apdu-perso.h  nbt-build-apdu.h
libs/hsw-apdu-protocol/: .clang-format  CMakeLists.txt  README.md
libs/hsw-apdu-protocol/.cmake/infineon-package-management/: CPM.cmake
libs/hsw-apdu-protocol/data/: Doxyfile.in  hsw-apdu-protocol-config.cmake.in
libs/hsw-apdu-protocol/include/infineon/: ifx-apdu-protocol.h
libs/hsw-apdu-protocol/src/: ifx-apdu-protocol.c
libs/hsw-apdu/data/: Doxyfile.in  hsw-apdu-config.cmake.in
libs/hsw-apdu/include/infineon/: ifx-apdu-error.h  ifx-apdu.h
libs/hsw-apdu/src/: ifx-apdu-error.c  ifx-apdu.c
libs/hsw-crc/: CMakeLists.txt  README.md
libs/hsw-crc/.cmake/: CPM.cmake
libs/hsw-crc/data/: Doxyfile.in  hsw-crc-config.cmake.in
libs/hsw-crc/include/infineon/: ifx-crc.h
libs/hsw-crc/src/: ifx-crc.c
libs/hsw-error/: .cmake-format.yaml  CMakeLists.txt  README.md
libs/hsw-error/.cmake/: CPM.cmake
libs/hsw-error/data/: Doxyfile.in  hsw-error-config.cmake.in
libs/hsw-error/include/infineon/: ifx-error.h
libs/hsw-error/src/: ifx-error.c
libs/hsw-i2c/: CMakeLists.txt  README.md
libs/hsw-i2c/data/: hsw-i2c-config.cmake.in
libs/hsw-i2c/include/infineon/: ifx-i2c.h
libs/hsw-i2c/src/: ifx-i2c-mock.c
libs/hsw-logger/: CMakeLists.txt  README.md
libs/hsw-logger/data/: hsw-logger-config.cmake.in
libs/hsw-logger/include/infineon/: ifx-logger.h
libs/hsw-logger/src/: ifx-logger.c
libs/hsw-ndef/: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md
libs/hsw-ndef-bp/: CMakeLists.txt  README.md
libs/hsw-ndef-bp/data/: hsw-ndef-bp-config.cmake.in
libs/hsw-ndef-bp/include/infineon/: ifx-ndef-bp-lib.h  ifx-record-bp.h
libs/hsw-ndef-bp/src/include/: ifx-record-handler-bp.h
libs/hsw-ndef-bp/src/model/: ifx-record-bp.c
libs/hsw-ndef-bp/src/records/: ifx-record-handler-bp.c
libs/hsw-ndef/LICENSES/: MIT.txt
libs/hsw-ndef/data/: Doxyfile.in  hsw-ndef-config.cmake.in
libs/hsw-ndef/docs/images/: hsw-ndef-architecture.png.license
libs/hsw-ndef/include/infineon/: ifx-ndef-errors.h  ifx-ndef-lib.h  ifx-ndef-message.h  ifx-ndef-record.h  ifx-record-alt-carrier.h  ifx-record-bluetooth-le.h  ifx-record-bluetooth.h  ifx-record-error.h  ifx-record-external.h  ifx-record-handler.h  ifx-record-handover-select.h  ifx-record-mime.h  ifx-record-uri.h
libs/hsw-ndef/src/: ifx-ndef-message.c
libs/hsw-ndef/src/include/: ifx-bluetooth-core-config.h  ifx-record-handler-alt-carrier.h  ifx-record-handler-bluetooth-le.h  ifx-record-handler-bluetooth.h  ifx-record-handler-error.h  ifx-record-handler-generic.h  ifx-record-handler-handover-select.h  ifx-record-handler-uri.h
libs/hsw-ndef/src/model/: ifx-ndef-record.c  ifx-record-alt-carrier.c  ifx-record-bluetooth-le.c  ifx-record-bluetooth.c  ifx-record-error.c  ifx-record-external.c  ifx-record-handover-select.c  ifx-record-mime.c  ifx-record-uri.c
libs/hsw-ndef/src/ndef-record/: ifx-record-handler.c
libs/hsw-protocol/: CMakeLists.txt  README.md
libs/hsw-protocol/.cmake/infineon-package-management/: README.md
libs/hsw-protocol/data/: hsw-protocol-config.cmake.in
libs/hsw-protocol/src/: ifx-protocol.c
libs/hsw-t1prime/: .gitignore  CMakeLists.txt  README.md
libs/hsw-t1prime/.cmake/: utils.cmake
libs/hsw-t1prime/data/: hsw-t1prime-config.cmake.in
libs/hsw-t1prime/include/infineon/: ifx-t1prime-lib.h  ifx-t1prime.h
libs/hsw-t1prime/src/: ifx-t1prime.c  ifx-t1prime.h
libs/hsw-t1prime/src/t1prime/: ifx-t1prime-datastructures.h
libs/hsw-timer/: CMakeLists.txt  README.md
libs/hsw-timer/.cmake/infineon-package-management/: .cmake-format-additional_commands-cpm
libs/hsw-timer/data/: hsw-timer-config.cmake.in
libs/hsw-timer/include/infineon/: ifx-timer.h
libs/hsw-timer/src/: ifx-timer-mock.c
libs/hsw-utils/: .gitignore  CMakeLists.txt  README.md
libs/hsw-utils/data/: Doxyfile.in  hsw-utils-config.cmake.in
libs/hsw-utils/src/: ifx-tlv.c  ifx-utils.c
(+13 files in other folders)
